--- a/Expense_Tracker_ASP.NET_CORE/Views/_ViewImports.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Expense_Tracker_ASP.NET_CORE
 @using Expense_Tracker_ASP.NET_CORE.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
