--- a/Expense_Tracker_ASP.NET_CORE/Views/Category/Details.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Category/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CatogeryId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.CategoryId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
