--- a/Expense_Tracker_ASP.NET_CORE/Views/Shared/_Layout.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
    @* <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/23.1.36/material.css" />*@
     <link href="https://cdn.syncfusion.com/ej2/23.1.36/bootstrap5-dark.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Josefin+Sans:wght@100;200;300;400;500;600&family=Lora:ital,wght@1,400;1,500;1,600&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Varela&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Expense_Tracker_ASP.NET_CORE.styles.css" asp-append-version="true" />
      <script src="https://cdn.syncfusion.com/ej2/23.1.36/dist/ej2.min.js"></script>
