--- a/Expense_Tracker_ASP.NET_CORE/Views/Category/Index.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Category/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<Expense_Tracker_ASP.NET_CORE.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["PageTitle"] = "Categories";
+    ViewData["PageActionText"] = "+ New Category";
+    ViewData["PageActionUrl"] = "/Category/AddOrEdit";
 }
 
 <div class="row">
