--- a/Expense_Tracker_ASP.NET_CORE/Views/Shared/_Layout.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Expense_Tracker_ASP.NET_CORE</title>
+    <title>Expense Tracker</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
    @* <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/23.1.36/material.css" />*@
     <link href="https://cdn.syncfusion.com/ej2/23.1.36/bootstrap5-dark.css" rel="stylesheet" />
@@ -39,6 +39,27 @@
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <main role="main" class="pb-3">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="d-flex flex-column mb-5">
+                                <div class="d-flex mb-1">
+                                    <div class="flex-grow-1">
+                                        <h3 class="fw-bold">@ViewData["PageTitle"]</h3>
+                                    </div>
+                                    <div>
+                                        @if (ViewData["PageActionText"] != null)
+                                        {
+                                            <a style="color: inherit" class="btn btn-success" href="@ViewData["PageActionUrl"]">
+                                                @ViewData["PageActionText"]
+                                            </a>
+                                        }
+                                    </div>
+                                </div>
+                                <ejs-breadcrumb id="breadcrumb"
+                                separatorTemplate="@Html.Raw("<span class='fa-solid fa-angle-right''></span>")"></ejs-breadcrumb>
+                            </div>
+                        </div>
+                    </div>
                     @RenderBody()
                 </main>
             </div>
