--- a/Expense_Tracker_ASP.NET_CORE/wwwroot/css/site.css
+++ b/Expense_Tracker_ASP.NET_CORE/wwwroot/css/site.css
@@ -18,13 +18,26 @@ html {
     font-family: "Inter"
 }
 body {
-  margin-bottom: 60px;
-  background-color: #12161d;
-  color:#fff;
+    margin-bottom: 60px;
+    background-color: #12161d;
+    color: #fff;
+    overflow: hidden;
 }
 
 .e-bigger {
     font-size: x-large;
+}
+
+.main-content {
+    margin-left: 290px;
+    overflow-y: auto;
+    height: 92vh;
+}
+
+/*BreadCrumb*/
+.e-breadcrumb a, .e-breadcrumb a:hover {
+    text-decoration: none !important;
+    color: inherit !important;
 }
 
 /*Button*/
