--- a/Expense_Tracker_ASP.NET_CORE/Views/Transaction/AddOrEdit.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Transaction/AddOrEdit.cshtml
@@ -9,11 +9,11 @@
         <div class="widget p-5" style="background-color: #212b36">
         <form asp-action="AddOrEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" name="TransactionId" value="@Model.TransactionId" />
             <div class="mb-3">
                 <ejs-datepicker id="date" ejs-for="Date" 
                 placeholder="Date" floatLabelType="Always"
                 format="MMM-dd-yy"></ejs-datepicker>
-                <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <ejs-dropdownlist id="ddlCategory" ejs-for="CategoryId"
@@ -22,17 +22,18 @@
                 filterType="Contains" popupHeight="220">
                 <e-dropdownlist-fields value="CategoryId" text="TitleWithIcon"></e-dropdownlist-fields>
                 </ejs-dropdownlist>
+                    <span asp-validation-for="CategoryId" class="text-danger fs-6"></span>
+
             </div>
             <div class="mb-3">
                 <ejs-numerictextbox id="amount" ejs-for="Amount"
                 placeholder="Amount" floatLabelType="Always"
                 min=0 format="c0"></ejs-numerictextbox>
-                <span asp-validation-for="Amount" class="text-danger"></span>
+                <span asp-validation-for="Amount" class="text-danger fs-6"></span>
             </div>
             <div class="mb-3">
                 <ejs-textbox id="title" placeholder="Note" ejs-for="Note" 
                 floatLabelType="Always" multiline="true"></ejs-textbox>
-                <span asp-validation-for="Note" class="text-danger"></span>
             </div>
                 <ejs-button id="submit" type="submit" content="Submit" cssClass="e-success"></ejs-button>
         </form>
@@ -45,6 +46,6 @@
     </div>
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
