--- a/Expense_Tracker_ASP.NET_CORE/Views/Transaction/AddOrEdit.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Transaction/AddOrEdit.cshtml
@@ -13,7 +13,7 @@
             <div class="mb-3">
                 <ejs-datepicker id="date" ejs-for="Date" 
                 placeholder="Date" floatLabelType="Always"
-                format="MMM-dd-yy"></ejs-datepicker>
+                format="MMM-dd-yyyy"></ejs-datepicker>
             </div>
             <div class="mb-3">
                 <ejs-dropdownlist id="ddlCategory" ejs-for="CategoryId"
