--- a/Expense_Tracker_ASP.NET_CORE/Views/Shared/_Layout.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Shared/_Layout.cshtml
@@ -14,10 +14,11 @@
      <script src="https://cdn.syncfusion.com/ej2/23.1.36/dist/ej2.min.js"></script>
 </head>
 <body class="e-bigger">
+    <partial name="_SideBar"/>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Expense_Tracker_ASP.NET_CORE</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Expense Tracker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,11 +36,14 @@
             </div>
         </nav>
     </header>
-    <div class="container mt-5">
+    <div class="main-content">
+        <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-10">
+                <div class="@(ViewData["isDashboard"] == null ? "col-md-10":"col-md-12")">
                 <main role="main" class="pb-3">
-                    <div class="row">
+                        @if (ViewData["isDashboard"] == null)
+                        {
+                            <div class="row">
                         <div class="col-md-7">
                             <div class="d-flex flex-column mb-5">
                                 <div class="d-flex mb-1">
@@ -60,12 +64,13 @@
                             </div>
                         </div>
                     </div>
+                        }
                     @RenderBody()
                 </main>
             </div>
         </div>
     </div>
-
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
