--- a/Expense_Tracker_ASP.NET_CORE/Views/Transaction/Index.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Transaction/Index.cshtml
@@ -13,9 +13,9 @@
             <e-grid-pagesettings pageSize="5"></e-grid-pagesettings>
             <e-grid-columns>
                 <e-grid-column headerText="Category" field="CategoryTitleWithIcon"></e-grid-column>
-                <e-grid-column headerText="Date" field="Date" width="110px"
-                 type="date" format="MMM-dd-yy" ></e-grid-column>
-                <e-grid-column headerText="Date" field="FormattedAmount" textAlign="Right" width="110px"></e-grid-column>
+                <e-grid-column headerText="Date" field="Date" width="150px"
+                               type="date" format="MMM-dd-yyyy" textAlign="Left"></e-grid-column>
+                <e-grid-column headerText="Amount" field="FormattedAmount" textAlign="Right" width="110px"></e-grid-column>
                 <e-grid-column headerText="Actions" template="#actionColumnTemplate" width="100px"></e-grid-column>
             </e-grid-columns>
         </ejs-grid>
@@ -32,7 +32,7 @@
             <i class="fa-solid fa-pen fa-lg"></i>
         </a>
         <form action="/Transaction/Delete/${TransactionId}" method="post">
-    @Html.AntiForgeryToken()
+            @Html.AntiForgeryToken()
             <button type="submit" class="btn btn-sm btn-link no-a-decoration"
             onclick="return confirm(&quot;Are you sure to delete this record?&quot;)">
                 <i class="fa-solid fa-trash-can fa-lg text-danger"></i>
