--- a/Expense_Tracker_ASP.NET_CORE/wwwroot/css/site.css
+++ b/Expense_Tracker_ASP.NET_CORE/wwwroot/css/site.css
@@ -33,6 +33,32 @@ body {
     overflow-y: auto;
     height: 92vh;
 }
+/*tab navigation*/
+.login-logout-card .card-header {
+    padding: 0px 0px 12px 0px;
+}
+
+.login-logout-card ul.nav-tabs {
+    margin: 0px 0px -12px 0px;
+}
+
+.login-logout-card li.nav-item {
+    width: 50%;
+}
+
+.login-logout-card a.nav-link {
+    font-size: 1.5rem;
+    color: #495057;
+    text-align: center;
+    padding: 1rem;
+}
+
+.login-logout-card .card-body {
+    padding: 10px 20px;
+}
+.card {
+    color: #2E2E2E;
+}
 
 /*BreadCrumb*/
 .e-breadcrumb a, .e-breadcrumb a:hover {
