login and register page created

--- a/Expense_Tracker_ASP.NET_CORE/Areas/Identity/Pages/_AuthLayout.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Areas/Identity/Pages/_AuthLayout.cshtml
@@ -9,12 +9,12 @@
     <div class="card login-logout-card">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-items">
+                <li class="nav-item">
                     <a class="nav-link" href="/Identity/Account/Login">
                         Log In    
                     </a>
                 </li>
-                <li class="nav-items">
+                <li class="nav-item">
                     <a class="nav-link" href="/Identity/Account/Register">
                         Register    
                     </a>
@@ -22,9 +22,11 @@
             </ul>
         </div>
         <div class="card-body">
-                
-                    @RenderBody()
-               
+                <div class="row justify-content-center">
+                    <div class="col-10 my-4">
+                        @RenderBody()
+                     </div>
+                </div> 
         </div>
     </div>
 </div>
@@ -38,11 +40,10 @@
             const currentPage = location.pathname;
             $('.nav-tabs li a').each(function () {
                 const $this = $(this);
-                if (currentPage.toLowerCase().indexOf($this.attr('href').toLowerCase() !== -1) {
+                if (currentPage.toLowerCase().indexOf($this.attr('href').toLowerCase()) !== -1) {
                     $this.addClass('active');
                 }
             });
         });
-
     </script>      
 }
