--- a/Expense_Tracker_ASP.NET_CORE/Views/Shared/_LoginPartial.cshtml
+++ b/Expense_Tracker_ASP.NET_CORE/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-route-returnUrl="@Url.Action("Dashboard", "Logout", new { area = "" })">
+        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "DashBoard", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
