--- a/Expense_Tracker_ASP.NET_CORE/wwwroot/css/site.css
+++ b/Expense_Tracker_ASP.NET_CORE/wwwroot/css/site.css
@@ -232,6 +232,17 @@ body {
             margin-top: 35px;
         }
 
+
+#logout {
+    display: inline-block;
+    width: 100% !important;
+    background-color: rgb(98, 0, 0);
+    color: rgb(171, 163, 152);
+    font-weight: bold;
+    padding: 7px 5px;
+    box-sizing: border-box;
+    text-transform: uppercase;
+}
 /*Navbar*/
 nav.navbar {
     background-color: rgba(18, 22, 29);
